--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
     "cross-env": "^5.2.0",
+    "moment": "^2.24.0",
     "nuxt": "^2.3.4",
-    "nuxt-buefy": "^0.3.2",
-    "@nuxtjs/axios": "^5.3.6"
+    "nuxt-buefy": "^0.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
